# tevianConsole

./: CMakeLists.txt  jsonparser.cpp  main.cpp  tevianConsole.pro  tevianexchanger.cpp  tevianexchanger.h
